{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 86,
  "lineage": "d641956a-3433-2922-3930-4ba32a1a90ae",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/loadBalancers/udacity-project-1-lb/frontendIPConfigurations/udacity-project-1-lb_frontend",
                "name": "udacity-project-1-lb_frontend",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/publicIPAddresses/udacity-project-1-pip"
              }
            ],
            "id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/loadBalancers/udacity-project-1-lb",
            "location": "eastus",
            "name": "udacity-project-1-lb",
            "resource_group_name": "udacity-project-1-rg",
            "sku": "Standard",
            "tags": {
              "environment": "env",
              "owner": "adelriob",
              "project": "project_1"
            }
          },
          "dependencies": [
            "azurerm_public_ip.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/loadBalancers/udacity-project-1-lb/backendAddressPools/udacity-project-1-backend_add_pool",
            "loadbalancer_id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/loadBalancers/udacity-project-1-lb",
            "name": "udacity-project-1-backend_add_pool",
            "resource_group_name": "udacity-project-1-rg"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/loadBalancers/udacity-project-1-lb/probes/udacity-project-1-lb_health",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/loadBalancers/udacity-project-1-lb",
            "name": "udacity-project-1-lb_health",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp",
            "resource_group_name": "udacity-project-1-rg"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/loadBalancers/udacity-project-1-lb/backendAddressPools/udacity-project-1-backend_add_pool",
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/loadBalancers/udacity-project-1-lb/frontendIPConfigurations/udacity-project-1-lb_frontend",
            "frontend_ip_configuration_name": "udacity-project-1-lb_frontend",
            "frontend_port": 80,
            "id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/loadBalancers/udacity-project-1-lb/loadBalancingRules/udacity-project-1-lb_rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/loadBalancers/udacity-project-1-lb",
            "name": "udacity-project-1-lb_rule",
            "probe_id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/loadBalancers/udacity-project-1-lb/probes/udacity-project-1-lb_health",
            "protocol": "Tcp",
            "resource_group_name": "udacity-project-1-rg"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_lb_probe.main",
            "azurerm_public_ip.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/networkInterfaces/udacity-project-1-nic-0",
            "internal_domain_name_suffix": "q2ftuibsguourpgx2m3wmvmswg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "udacity-project-1-ipconfig",
                "primary": true,
                "private_ip_address": "10.4.0.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/virtualNetworks/udacity-project-1-vnet/subnets/udacity-project-1-subnet"
              }
            ],
            "location": "eastus",
            "name": "udacity-project-1-nic-0",
            "private_ip_address": "10.4.0.6",
            "private_ip_addresses": [
              "10.4.0.6"
            ],
            "resource_group_name": "udacity-project-1-rg",
            "tags": {
              "environment": "env",
              "owner": "adelriob",
              "project": "project_1"
            }
          },
          "dependencies": [
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/networkInterfaces/udacity-project-1-nic-1",
            "internal_domain_name_suffix": "q2ftuibsguourpgx2m3wmvmswg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "udacity-project-1-ipconfig",
                "primary": true,
                "private_ip_address": "10.4.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/virtualNetworks/udacity-project-1-vnet/subnets/udacity-project-1-subnet"
              }
            ],
            "location": "eastus",
            "name": "udacity-project-1-nic-1",
            "private_ip_address": "10.4.0.4",
            "private_ip_addresses": [
              "10.4.0.4"
            ],
            "resource_group_name": "udacity-project-1-rg",
            "tags": {
              "environment": "env",
              "owner": "adelriob",
              "project": "project_1"
            }
          },
          "dependencies": [
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/networkInterfaces/udacity-project-1-nic-2",
            "internal_domain_name_suffix": "q2ftuibsguourpgx2m3wmvmswg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "udacity-project-1-ipconfig",
                "primary": true,
                "private_ip_address": "10.4.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/virtualNetworks/udacity-project-1-vnet/subnets/udacity-project-1-subnet"
              }
            ],
            "location": "eastus",
            "name": "udacity-project-1-nic-2",
            "private_ip_address": "10.4.0.5",
            "private_ip_addresses": [
              "10.4.0.5"
            ],
            "resource_group_name": "udacity-project-1-rg",
            "tags": {
              "environment": "env",
              "owner": "adelriob",
              "project": "project_1"
            }
          },
          "dependencies": [
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/loadBalancers/udacity-project-1-lb/backendAddressPools/udacity-project-1-backend_add_pool",
            "id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/networkInterfaces/udacity-project-1-nic-0/ipConfigurations/udacity-project-1-ipconfig|/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/loadBalancers/udacity-project-1-lb/backendAddressPools/udacity-project-1-backend_add_pool",
            "ip_configuration_name": "udacity-project-1-ipconfig",
            "network_interface_id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/networkInterfaces/udacity-project-1-nic-0"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/loadBalancers/udacity-project-1-lb/backendAddressPools/udacity-project-1-backend_add_pool",
            "id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/networkInterfaces/udacity-project-1-nic-1/ipConfigurations/udacity-project-1-ipconfig|/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/loadBalancers/udacity-project-1-lb/backendAddressPools/udacity-project-1-backend_add_pool",
            "ip_configuration_name": "udacity-project-1-ipconfig",
            "network_interface_id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/networkInterfaces/udacity-project-1-nic-1"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/loadBalancers/udacity-project-1-lb/backendAddressPools/udacity-project-1-backend_add_pool",
            "id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/networkInterfaces/udacity-project-1-nic-2/ipConfigurations/udacity-project-1-ipconfig|/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/loadBalancers/udacity-project-1-lb/backendAddressPools/udacity-project-1-backend_add_pool",
            "ip_configuration_name": "udacity-project-1-ipconfig",
            "network_interface_id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/networkInterfaces/udacity-project-1-nic-2"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/networkInterfaces/udacity-project-1-nic-0|/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/networkSecurityGroups/udacity-project-1-nsg",
            "network_interface_id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/networkInterfaces/udacity-project-1-nic-0",
            "network_security_group_id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/networkSecurityGroups/udacity-project-1-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.main",
            "azurerm_network_security_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/networkInterfaces/udacity-project-1-nic-1|/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/networkSecurityGroups/udacity-project-1-nsg",
            "network_interface_id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/networkInterfaces/udacity-project-1-nic-1",
            "network_security_group_id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/networkSecurityGroups/udacity-project-1-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.main",
            "azurerm_network_security_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/networkInterfaces/udacity-project-1-nic-2|/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/networkSecurityGroups/udacity-project-1-nsg",
            "network_interface_id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/networkInterfaces/udacity-project-1-nic-2",
            "network_security_group_id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/networkSecurityGroups/udacity-project-1-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.main",
            "azurerm_network_security_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/networkSecurityGroups/udacity-project-1-nsg",
            "location": "eastus",
            "name": "udacity-project-1-nsg",
            "resource_group_name": "udacity-project-1-rg",
            "security_rule": [],
            "tags": {
              "environment": "env",
              "owner": "adelriob",
              "project": "project_1"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "blockinternet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/networkSecurityGroups/udacity-project-1-nsg/securityRules/BlockAllInternet",
            "name": "BlockAllInternet",
            "network_security_group_name": "udacity-project-1-nsg",
            "priority": 120,
            "protocol": "*",
            "resource_group_name": "udacity-project-1-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.4.0.0/16",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/networkSecurityGroups/udacity-project-1-nsg/securityRules/AllowTrafficWithinVNET",
            "name": "AllowTrafficWithinVNET",
            "network_security_group_name": "udacity-project-1-nsg",
            "priority": 110,
            "protocol": "TCP",
            "resource_group_name": "udacity-project-1-rg",
            "source_address_prefix": "10.4.0.0/16",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "udacity-project-1-azure-project1",
            "fqdn": "udacity-project-1-azure-project1.eastus.cloudapp.azure.com",
            "id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/publicIPAddresses/udacity-project-1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.146.70.45",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "udacity-project-1-pip",
            "resource_group_name": "udacity-project-1-rg",
            "sku": "Standard",
            "tags": {
              "environment": "env",
              "owner": "adelriob",
              "project": "project_1"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.4.0.0/24",
            "address_prefixes": [
              "10.4.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/virtualNetworks/udacity-project-1-vnet/subnets/udacity-project-1-subnet",
            "name": "udacity-project-1-subnet",
            "resource_group_name": "udacity-project-1-rg",
            "virtual_network_name": "udacity-project-1-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.4.0.0/16"
            ],
            "guid": "203a0b87-3532-481d-bcd7-e33b665592b6",
            "id": "/subscriptions/e602deb0-5931-4735-b543-8659027d624b/resourceGroups/udacity-project-1-rg/providers/Microsoft.Network/virtualNetworks/udacity-project-1-vnet",
            "location": "eastus",
            "name": "udacity-project-1-vnet",
            "resource_group_name": "udacity-project-1-rg",
            "tags": {
              "environment": "env",
              "owner": "adelriob",
              "project": "project_1"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}